--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             Effective Solutions <br />
             for Your Business
           </h1>
-          <a href="">Order Service</a>
+          <button type="button">Order service</button>
         </section>
       </div>
 
@@ -70,31 +70,39 @@
 
       <section>
         <h3>What are we doing</h3>
-        <img src="./images/imageshw01/img1.jpg" alt="" width="360" />
-        <img src="./images/imageshw01/img2.jpg" alt="" width="360" />
-        <img src="./images/imageshw01/img3.jpg" alt="" width="360" />
+        <ul>
+          <li>
+            <img
+              src="./images/imageshw01/img1.jpg"
+              alt="computer"
+              width="360"
+            />
+            <img src="./images/imageshw01/img2.jpg" alt="screen" width="360" />
+            <img src="./images/imageshw01/img3.jpg" alt="phone" width="360" />
+          </li>
+        </ul>
       </section>
 
       <section>
         <h4>Our team</h4>
         <ul>
           <li>
-            <img src="./images/imageshw01/img4.jpg" alt="" width="264" />
+            <img src="./images/imageshw01/img4.jpg" alt="face" width="264" />
             <h5>Mark Guerrero</h5>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="./images/imageshw01/img5.jpg" alt="" width="264" />
+            <img src="./images/imageshw01/img5.jpg" alt="face" width="264" />
             <h5>Tom Ford</h5>
             <p>Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/imageshw01/img6.jpg" alt="" width="264" />
+            <img src="./images/imageshw01/img6.jpg" alt="face" width="264" />
             <h5>Camila Garcia</h5>
             <p>Marketing</p>
           </li>
           <li>
-            <img src="./images/imageshw01/img7.jpg" alt="" width="264" />
+            <img src="./images/imageshw01/img7.jpg" alt="face" width="264" />
             <h5>Daniel Wilson</h5>
             <p>UI Designer</p>
           </li>
