--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href=""> webstudio </a>
+        <a href="./index.html">WebStudio</a>
 
         <ul>
           <li><a href="">Studio</a></li>
@@ -19,18 +19,17 @@
       </nav>
 
       <div>
-        <button>info@devstudio.com</button>
-        <button>+11 (000) 111-11-11</button>
+        <ul>
+          <li><a href="info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
       </div>
     </header>
 
     <main>
       <div>
         <section>
-          <h1>
-            Effective Solutions <br />
-            for Your Business
-          </h1>
+          <h1>Effective Solutions for Your Business</h1>
           <button type="button">Order service</button>
         </section>
       </div>
@@ -111,7 +110,7 @@
     </main>
 
     <footer>
-      <a href=""> webstudio </a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
